--- a/mapa.css
+++ b/mapa.css
@@ -12,10 +12,6 @@
   float: left;
 }
 
-#btn {
-  
-  /*background: rgb(204, 200, 191); */
-  }
 
 .div2 {
   /*background: #666;*/
@@ -27,11 +23,36 @@
 }
 
 .div3 {
-    top:11%;
-    left:90%;
-    top: 5%;
-    width:100px;
-    height:40px;
     position: absolute;
-    z-index: 10;
+    z-index: 1000;
+    top: 90px;
+    left: 0px;
+    pointer-events: visiblePainted;
+    pointer-events: auto;
+    
+}
+
+#btn {
+  width: 34px;
+  height: 34px;
+  line-height: 30px;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  font: bold 18px 'Lucida Console', Monaco, monospace;
+  text-indent: 1px;
+  font-size: 22px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border: 2px solid rgba(0,0,0,0.2);
+  margin-left: 10px;
+  border-radius: 4px;
+  
+  background-color: #fff;
+}
+
+#button:focus {
+  background-color: #f4f4f4;
 }
