--- a/mapeditor.css
+++ b/mapeditor.css
@@ -11,7 +11,38 @@
 #button{
     z-index: 1000;
     position: absolute;
+    background-image: url('./icons/save.svg');
+    background-size: 15px;
+    background-position: center;
+    background-repeat: no-repeat;
     top: 330px;
+    width: 34px;
+    height: 34px;
+    line-height: 30px;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    font: bold 18px 'Lucida Console', Monaco, monospace;
+    text-indent: 1px;
+    font-size: 22px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border: 2px solid rgba(0,0,0,0.2);
+    margin-left: 10px;
+    border-radius: 4px;
+    background-color: #fff;
+}
+
+#download-button{
+    z-index: 1000;
+    position: absolute;
+    background-image: url('./icons/download.svg');
+    background-size: 15px;
+    background-position: center;
+    background-repeat: no-repeat;
+    top: 375px;
     width: 34px;
     height: 34px;
     line-height: 30px;
