--- a/public/mapa.css
+++ b/public/mapa.css
@@ -1,7 +1,14 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 #map {position:absolute; top: 0; bottom: 0; left: 0; right: 0;}
 
 #poza1 {
   object-fit: contain;
+  height: 570px;
+  width: 585px;
 }
 
 
@@ -14,9 +21,9 @@
 
 
 .div2 {
-  /*background: #666;*/
-  width: 50%; 
-  max-height: 50%;
+  background: rgb(74, 74, 74);
+  width: 100vh; 
+  height: 100vh;
   float: right;
   position: relative;
   display: none; /* trebuie schimbat cu flex*/
