--- a/public/upload.css
+++ b/public/upload.css
@@ -9,6 +9,22 @@ body {
   left: 10px;
 }
 
+#cloudinary-link {
+  position: absolute;
+  z-index: 1000;
+  top: 550px;
+  left: 150px;
+}
+
+#upload_widget {
+  padding: 10px;
+  margin: 10px;
+  background-color:#828387;
+  color:#fff;
+  font-weight:600;
+  border-radius:5px;
+}
+
 input[type=file] {
   padding: 10px;
   margin: 10px;
