--- a/public/mapa.css
+++ b/public/mapa.css
@@ -7,26 +7,28 @@ body {
 
 #poza1 {
   object-fit: contain;
-  height: 570px;
-  width: 585px;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 
 .div1 {
   /*background: #999;*/
-  height: 100%;
+  max-height: 100%;
   width: 100%; /* mai tarziu tre schimbat cu 50%*/
   float: left;
 }
 
 
 .div2 {
+  position:relative;
+  float:right;
   background: rgb(74, 74, 74);
-  width: 100vh; 
+  width: 50%;
   height: 100vh;
-  float: right;
-  position: relative;
   display: none; /* trebuie schimbat cu flex*/
+  
+  
 }
 
 #mapeditor-link {
