adding close button to splitscreenMode

--- a/public/mapa.css
+++ b/public/mapa.css
@@ -11,6 +11,21 @@ body {
   max-width: 100%;
 }
 
+#xicon {
+  margin: 10px;
+  padding: 10px;
+  object-fit: contain;
+  position:absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  opacity: 0.5;
+  
+}
+
 
 .div1 {
   /*background: #999;*/
