--- a/public/mapa.css
+++ b/public/mapa.css
@@ -12,8 +12,8 @@ body {
 }
 
 #xicon {
-  margin: 10px;
-  padding: 10px;
+  margin: 5px;
+  padding: 5px;
   object-fit: contain;
   position:absolute;
   top: 0;
@@ -23,6 +23,7 @@ body {
   width: 40px;
   height: 40px;
   opacity: 0.5;
+  cursor: pointer;
   
 }
 
