--- a/public/mapeditor.css
+++ b/public/mapeditor.css
@@ -62,9 +62,75 @@
     background-color: #fff;
 }
 
+#edit-button{
+    z-index: 1000;
+    position: absolute;
+    background-image: url('./icons/edit.svg');
+    background-size: 15px;
+    background-position: center;
+    background-repeat: no-repeat;
+    top: 420px;
+    width: 34px;
+    height: 34px;
+    line-height: 30px;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    font: bold 18px 'Lucida Console', Monaco, monospace;
+    text-indent: 1px;
+    font-size: 22px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border: 2px solid rgba(0,0,0,0.2);
+    margin-left: 10px;
+    border-radius: 4px;
+    background-color: #fff;
+}
+
 #map-link {
     position: absolute;
     z-index: 1000;
     top: 550px;
     left: 10px;
   }
+
+textarea {
+    position: absolute;
+    z-index: 1000;
+    bottom: 30px;
+    right: 30px;#
+    padding: 3px;
+    border: none;
+    width: 400px;
+    display: none; /* trebuie schimbat cu block */
+}
+
+#okbutton {
+    position: absolute;
+    z-index: 1000;
+    bottom: 200px;
+    right: 30px;
+    object-fit: contain;   
+    display: none; 
+}
+
+#cancelbutton {
+    position: absolute;
+    z-index: 1000;
+    bottom: 200px;
+    right: 110px;
+    object-fit: contain;   
+    display: none; 
+}
+
+#upload {
+    position: absolute;
+    z-index: 1000;
+    bottom: 200px;
+    right: 180px;
+    object-fit: contain;   
+    display: none; 
+}
+
